--- a/index.html
+++ b/index.html
@@ -1,135 +1,142 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <base target="_top">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- *** FIXED: Title changed to match the form *** -->
-    <title>แบบสอบถามความคิดเห็นผู้ปกครองนักเรียนปฐมวัย</title>
-    
-    <!-- *** FIXED: Favicon changed to match the form *** -->
-    <link rel="icon" type="image/png" href="https://img5.pic.in.th/file/secure-sv1/IQRA-LOGO.png">
-    
-    <!-- *** REMOVED: Unused Tailwind CSS script *** -->
-    
-    <!-- Font Awesome CDN (Used by the modal) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
-    <!-- Sarabun Font from Google Fonts (Used by the modal) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600;700&display=swap" rel="stylesheet">
-    
-   <style>
-        /* New CSS for a perfect full-screen iframe */
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden; /* Prevents the outer page from scrolling */
-            font-family: 'Sarabun', sans-serif;
-        }
+  <base target="_top">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>แบบสอบถามความคิดเห็นผู้ปกครองนักเรียนปฐมวัย</title>
 
-        #mainIframe {
-            width: 100%;
-            height: 100%; /* Fills the body, which is 100% height */
-            display: block;
-            border: none; /* Removes any default iframe border */
-        }
-    </style>
+  <link rel="icon" type="image/png" href="https://img5.pic.in.th/file/secure-sv1/IQRA-LOGO.png" />
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // URL of your Google Apps Script web app
-            const web_app_url = 'https://script.google.com/macros/s/AKfycbxYNJE8EiMNifEjB0SLDv5Aulwu7-3DscHJPMA2ASugKqUS54DO8fpoPl70VckgnXqN4w/exec';
-            
-            // Function to check for In-App Browser, while excluding Google Chrome
-            function is_InAppBrowser() {
-                const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-                const isChrome = /Chrome/.test(userAgent);
-                
-                // Check for common in-app browser user agents, excluding Chrome
-                return (
-                    !isChrome && 
-                    /FBAV|FBAN|LINE|Tiktok|Instagram|Twitter|Snapchat|Telegram|MicroMessenger|Pinterest|Reddit|Threads/i.test(userAgent)
-                );
-            }
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-            // Get the main iframe element
-            const mainIframe = document.getElementById('mainIframe');
-            const urlParams = new URLSearchParams(window.location.search);
-            
-            // If the URL already has the 'openExternalBrowser' parameter, we assume it's opened in a main browser
-            if (urlParams.has('openExternalBrowser')) {
-                mainIframe.src = web_app_url;
-                return;
-            }
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-            // Check if it's an In-App Browser and if so, show the modal
-            if (is_InAppBrowser()) {
-                const modal = document.getElementById('inAppBrowserModal');
-                const confirmButton = document.getElementById('confirmButton');
-                const copyLinkButton = document.getElementById('copyLinkButton');
-                const copyMessage = document.getElementById('copyMessage');
+  <!-- Sarabun font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
-                const urlToRedirect = new URL(window.location.href);
-                urlToRedirect.searchParams.set('openExternalBrowser', '1');
-
-                // Show the modal and hide the iframe
-                modal.classList.remove('hidden');
-ci.classList.add('hidden');
-                        }, 2000);
-                    } catch (err) {
-                        copyMessage.textContent = 'ไม่สามารถคัดลอกได้!';
-                        copyMessage.classList.remove('hidden');
-                        console.error('Failed to copy text: ', err);
-                    }
-                });
-            } else {
-                // If it's not an In-App Browser, load the Apps Script URL directly into the iframe
-                mainIframe.src = web_app_url;
-            }
-        });
-    </script>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden; /* Prevent outer page scrolling */
+      font-family: 'Sarabun', sans-serif;
+    }
+    #mainIframe {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-    <!-- Modal for In-App Browser warning -->
-    <div id="inAppBrowserModal" class="fixed inset-0 bg-gray-900 bg-opacity-75 z-50 flex items-center justify-center p-4 hidden">
-        <div class="bg-white rounded-none sm:rounded-lg shadow-none sm:shadow-xl w-full h-full sm:max-w-sm sm:h-auto p-6 flex flex-col justify-between text-center">
-            <div>
-                <div class="flex flex-col items-center justify-center mb-6">
-                    <!-- Heart icon from Font Awesome -->
-                    <i class="fa-solid fa-heart text-red-500 text-5xl mb-4"></i>
-Z</div>
-                
-                <h2 class="text-2xl font-bold text-gray-800 mb-2">เปิดในเบราว์เซอร์หลัก</h2>
-                <p class="text-gray-600 mb-6 text-sm">เพื่อประสิทธิภาพสูงสุดในการใช้งาน กรุณาเปิดหน้าเว็บนี้ในเบราว์เซอร์หลัก (เช่น Chrome, Safari) ค่ะ</p>
-                
-                <div class="text-left text-sm text-gray-700 mt-4 space-y-2">
-Y                   <p><b>คำแนะนำ:</b></p>
-              _     <p>• หากเปิดลิงก์นี้ด้วย Facebook และแอปพลิเคชันอื่นๆ: กรุณากดปุ่ม "คัดลอกลิงก์" เพื่อนำไปวางบนเบราว์เซอร์หลัก</p>
-                    <p>• หากเปิดผ่าน LINE: กดปุ่ม "เปิดเบราว์เซอร์" ได้เลยค่ะ</p>
-                </div>
-            </div>
-            
-            <div class="flex flex-col items-center mt-auto">
-D               <div class="flex justify-center space-x-4 mb-4">
-                    <button id="confirmButton" class="px-6 py-2 rounded-lg text-sm font-semibold text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-75 transition-colors duration-200">
-                        เปิดเบราว์เซอร์
-                    </button>
-                    <button id="copyLinkButton" class="px-6 py-2 rounded-lg text-sm font-semibold text-gray-800 bg-gray-200 hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-75 transition-colors duration-200">
-s                       คัดลอกลิงก์
-                    </button>
-                </div>
-                <span id="copyMessage" class="text-green-600 text-sm font-medium hidden">คัดลอกแล้ว!</span>
-            </div>
-        </div>
-    </div>
+  <!-- Modal for In-App Browser warning -->
+  <div id="inAppBrowserModal" class="fixed inset-0 bg-gray-900 bg-opacity-75 z-50 flex items-center justify-center p-4 hidden">
+    <div class="bg-white rounded-none sm:rounded-lg shadow-none sm:shadow-xl w-full h-full sm:max-w-sm sm:h-auto p-6 flex flex-col justify-between text-center">
+      <div>
+        <div class="flex flex-col items-center justify-center mb-6">
+          <i class="fa-solid fa-heart text-red-500 text-5xl mb-4"></i>
+        </div>
 
-    <!-- The iframe where the main content will be displayed -->
-  t <iframe id="mainIframe" scrolling="yes" src="https://script.google.com/macros/s/AKfycbxYNJE8EiMNifEjB0SLDv5Aulwu7-3DscHJPMA2ASugKqUS54DO8fpoPl70VckgnXqN4w/exec" frameborder="0"></iframe>
+        <h2 class="text-2xl font-bold text-gray-800 mb-2">เปิดในเบราว์เซอร์หลัก</h2>
+        <p class="text-gray-600 mb-6 text-sm">
+          เพื่อประสิทธิภาพสูงสุดในการใช้งาน กรุณาเปิดหน้าเว็บนี้ในเบราว์เซอร์หลัก (เช่น Chrome, Safari) ค่ะ
+        </p>
+
+        <div class="text-left text-sm text-gray-700 mt-4 space-y-2">
+          <p><b>คำแนะนำ:</b></p>
+          <p>• หากเปิดลิงก์นี้ด้วย Facebook และแอปพลิเคชันอื่นๆ: กรุณากดปุ่ม "คัดลอกลิงก์" เพื่อนำไปวางบนเบราว์เซอร์หลัก</p>
+          <p>• หากเปิดผ่าน LINE: กดปุ่ม "เปิดเบราว์เซอร์" ได้เลยค่ะ</p>
+        </div>
+      </div>
+
+      <div class="flex flex-col items-center mt-auto">
+        <div class="flex justify-center space-x-4 mb-4">
+          <button id="confirmButton" class="px-6 py-2 rounded-lg text-sm font-semibold text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-75 transition-colors duration-200">
+            เปิดเบราว์เซอร์
+          </button>
+          <button id="copyLinkButton" class="px-6 py-2 rounded-lg text-sm font-semibold text-gray-800 bg-gray-200 hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-75 transition-colors duration-200">
+            คัดลอกลิงก์
+          </button>
+        </div>
+        <span id="copyMessage" class="text-green-600 text-sm font-medium hidden">คัดลอกแล้ว!</span>
+      </div>
+    </div>
+  </div>
+
+  <!-- Main content iframe -->
+  <iframe
+    id="mainIframe"
+    scrolling="yes"
+    src="https://script.google.com/macros/s/AKfycbxYNJE8EiMNifEjB0SLDv5Aulwu7-3DscHJPMA2ASugKqUS54DO8fpoPl70VckgnXqN4w/exec"
+    frameborder="0">
+  </iframe>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const web_app_url = 'https://script.google.com/macros/s/AKfycbxYNJE8EiMNifEjB0SLDv5Aulwu7-3DscHJPMA2ASugKqUS54DO8fpoPl70VckgnXqN4w/exec';
+
+      function is_InAppBrowser() {
+        const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+        const isChrome = /Chrome/i.test(userAgent) && !/Edg/i.test(userAgent);
+        return (
+          !isChrome &&
+          /FBAV|FBAN|LINE|Tiktok|Instagram|Twitter|Snapchat|Telegram|MicroMessenger|Pinterest|Reddit|Threads/i.test(userAgent)
+        );
+      }
+
+      const mainIframe = document.getElementById('mainIframe');
+      const urlParams = new URLSearchParams(window.location.search);
+
+      // If explicitly opened in an external browser, just load the app
+      if (urlParams.has('openExternalBrowser')) {
+        mainIframe.src = web_app_url;
+        return;
+      }
+
+      if (is_InAppBrowser()) {
+        const modal = document.getElementById('inAppBrowserModal');
+        const confirmButton = document.getElementById('confirmButton');
+        const copyLinkButton = document.getElementById('copyLinkButton');
+        const copyMessage = document.getElementById('copyMessage');
+
+        const urlToRedirect = new URL(window.location.href);
+        urlToRedirect.searchParams.set('openExternalBrowser', '1');
+
+        // Show modal and hide iframe
+        modal.classList.remove('hidden');
+        mainIframe.classList.add('hidden');
+
+        confirmButton.addEventListener('click', function () {
+          // Try to open in external browser by navigating with the flag
+          window.location.href = urlToRedirect.toString();
+        });
+
+        copyLinkButton.addEventListener('click', async function () {
+          try {
+            await navigator.clipboard.writeText(urlToRedirect.toString());
+            copyMessage.textContent = 'คัดลอกแล้ว!';
+            copyMessage.classList.remove('hidden');
+            setTimeout(() => copyMessage.classList.add('hidden'), 2000);
+          } catch (err) {
+            copyMessage.textContent = 'ไม่สามารถคัดลอกได้!';
+            copyMessage.classList.remove('hidden');
+            console.error('Failed to copy text:', err);
+            setTimeout(() => copyMessage.classList.add('hidden'), 2000);
+          }
+        });
+      } else {
+        // Not an in-app browser: load directly
+        mainIframe.src = web_app_url;
+      }
+    });
+  </script>
 </body>
 </html>
-
